# python-uv-template

./: .gitignore  README.md  main.py  pyproject.toml
